--- a/src/www/index.html
+++ b/src/www/index.html
@@ -19,8 +19,14 @@ canvas {
 img {
   display: none;
 }
+song {
+  display: none;
+}
 </style>
 <img src="./graphics.png"/>
+<song href="./gloom_for_company.mid"></song>
+<song href="./eye_of_newt.mid"></song>
+<song href="./feline_mind.mid"></song>
 <script type="module" src="./bootstrap.js"></script>
 </head>
 <body>
